package java_design_patterns.O_state.mobile;

public interface AlertStateInterface {
    public void alert(MobilePhone ctx);
}
